syntax = "proto3";

option go_package = "github.com/lpsaldana/go-appointment-booking-microservices/common/pb";

package pb;

service AuthService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
}

message CreateUserResponse {
    string message = 1;
    bool success = 2;
}

message LoginRequest {
    string Username = 1;
    string Password = 2;
}

message LoginResponse {
    string token = 1;
    bool success = 2;
}